Show sick and vacation days in schedule, fix show every shift not just the last saved

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ header, footer,
 	background-color: #FFAB5A; /* Orange */
 }
 
-.first-col-secundary{
+.first-col-secondary{
 	background-color: #FFC093;
 }
 
